--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ p{padding: 10px; }
 </div>
 
 <div class="nav"> 
-<a href="sonic rush adventure _ Dash_1.0_develope-shop.apkk" download="sonic rush adventure"><center>Descargar</center></a>
+<a href="sonic rush adventure _ Dash_1.0_develope-shop.apk" download="sonic rush adventure"><center>Descargar</center></a>
 </div>
 
 <div class="main">
